[package]
name = "todo-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-rustls"] }
futures = "0.3"
rocket = "0.5.0-rc.1"